# taxi

./: .gitignore  .hgignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST  MANIFEST.in  README  README.md  README.rst  default.nix  entry.py  flake.nix  install.sh  main.py  models.py  parser.py  pkgs.nix  projectsdb.py  pusher.py  pyproject.toml  release.sh  remote.py  requirements_test.txt  settings.py  setup.cfg  setup.py  shell.nix  taxi  taxi.py  tests.nix  tksrc.sample  tox.ini  zebra.sample
.github/workflows/: python-package.yml
debian/: .gitignore  changelog  control  copyright  docs  gitlab-ci.yml  manpages  rules  taxi.1  taxi.bash-completion  taxi.install  taxi.neovim-addon  taxi.pydist  taxi.vim-addon  watch
debian/patches/: relax-requirements.patch  series
debian/source/: include-binaries
debian/upstream/: metadata
doc/: Makefile  api.rst  conf.py  devguide.rst  index.rst  tksrc.sample  userguide.rst  zebra.sample
src/taxi/: __init__.py  models.py  parser.py  projectsdb.py  pusher.py  remote.py  settings.py
taxi/: __init__.py  alias.py  aliases.py  app.py  commands.py  exceptions.py  models.py  parser.py  plugins.py  projects.py  projectsdb.py  pusher.py  remote.py  settings.py
taxi/backend/: __init__.py  dummy.py
taxi/backends/: __init__.py  dummy.py  exceptions.py  registry.py
taxi/commands/: __init__.py  add.py  alias.py  autofill.py  base.py  clean_aliases.py  commit.py  config.py  current.py  edit.py  (+9 more)
tests/: runtests.py  test_alias.py  test_date_utils.py  test_parsers.py  test_projects_db.py  test_settings.py  test_timesheet.py
(+58 files in other folders)
